--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^1.9.7",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@material-tailwind/react": "^1.2.3",
@@ -15,6 +17,7 @@
     "@mui/lab": "^5.0.0-alpha.100",
     "@mui/material": "^5.10.4",
     "@openzeppelin/contracts": "^4.7.1",
+    "@xmtp/xmtp-js": "^6.3.2",
     "connectkit": "^0.0.2",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
