--- a/.github/workflows/valist.yml
+++ b/.github/workflows/valist.yml
@@ -2,14 +2,11 @@ name: Valist Publish
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   valist-publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
