--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ethers": "^5.6.9",
     "lodash": "^4.17.21",
     "notistack": "^2.0.5",
+    "process": "^0.11.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
