--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/lab": "^5.0.0-alpha.100",
     "@mui/material": "^5.10.4",
     "@openzeppelin/contracts": "^4.7.1",
+    "@rainbow-me/rainbowkit": "^0.6.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@xmtp/xmtp-js": "^6.3.2",
