--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.0.0",
     "react-hooks-identicons": "^1.0.4",
     "react-router-dom": "^6.3.0",
+    "rxjs": "^7.5.7",
     "simplebar-react": "^2.4.1",
     "wagmi": "^0.6.4"
   },
