--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mui/lab": "^5.0.0-alpha.100",
     "@mui/material": "^5.10.4",
     "@openzeppelin/contracts": "^4.7.1",
-    "@rainbow-me/rainbowkit": "^0.6.1",
+    "@rainbow-me/rainbowkit": "^0.8.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@xmtp/xmtp-js": "^6.3.2",
@@ -39,7 +39,8 @@
     "rxjs": "^7.5.7",
     "simplebar-react": "^2.4.1",
     "use-react-router-breadcrumbs": "^4.0.1",
-    "wagmi": "^0.6.4"
+    "wagmi": "^0.11.5",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
