--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.100",
     "@mui/material": "^5.10.4",
+    "@nomiclabs/hardhat-etherscan": "^3.1.6",
     "@openzeppelin/contracts": "^4.7.1",
     "@rainbow-me/rainbowkit": "^0.8.1",
     "@web3-react/core": "^6.1.9",
@@ -39,9 +40,7 @@
     "rxjs": "^7.5.7",
     "simplebar-react": "^2.4.1",
     "use-react-router-breadcrumbs": "^4.0.1",
-    "wagmi": "^0.11.5",
-    "zustand": "^4.3.2"
-  },
+    "wagmi": "^0.11.5"},
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
     "@iconify/react": "^4.0.0",
