--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "rxjs": "^7.5.7",
     "simplebar-react": "^2.4.1",
     "use-react-router-breadcrumbs": "^4.0.1",
-    "wagmi": "^0.11.5"},
+    "wagmi": "^0.11.5"
+  },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
     "@iconify/react": "^4.0.0",
