--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "lodash": "^4.17.21",
     "notistack": "^2.0.5",
     "parcel": "^2.6.2",
+    "prismjs": "^1.29.0",
     "process": "^0.11.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hooks-identicons": "^1.0.4",
     "react-router-dom": "^6.3.0",
+    "react-simple-code-editor": "^0.13.1",
     "rxjs": "^7.5.7",
     "simplebar-react": "^2.4.1",
     "use-react-router-breadcrumbs": "^4.0.1",
