--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.6",
     "@openzeppelin/contracts": "^4.7.1",
     "@rainbow-me/rainbowkit": "^0.8.1",
+    "@redstone-finance/evm-connector": "^0.0.21",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@xmtp/xmtp-js": "^6.3.2",
@@ -39,6 +40,7 @@
     "react-hooks-identicons": "^1.0.4",
     "react-router-dom": "^6.3.0",
     "react-simple-code-editor": "^0.13.1",
+    "redstone-api": "^0.4.11",
     "rxjs": "^7.5.7",
     "simplebar-react": "^2.4.1",
     "use-react-router-breadcrumbs": "^4.0.1",
