--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@gelatonetwork/gasless-onboarding": "^0.0.2",
     "@gelatonetwork/relay-sdk": "^3.4.0",
     "@material-tailwind/react": "^1.2.3",
     "@mui/icons-material": "^5.10.6",
