--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
+    "@gelatonetwork/relay-context": "^2.1.0",
     "@iconify/react": "^4.0.0",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
@@ -60,6 +61,9 @@
     "ethereum-waffle": "^3.4.4",
     "hardhat": "^2.10.0",
     "postcss": "^8.4.14",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
+    "string_decoder": "^1.3.0",
     "tailwindcss": "^3.1.8"
   }
 }
